--- a/text.html
+++ b/text.html
@@ -1,7 +1,13 @@
 <style>
-  .video-title
+  p
   {
     font-family: Arial;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .video-title
+  {
     font-weight: bold;
     font-size: 18px;
     width: 300px;
@@ -12,19 +18,49 @@
 
   .video-stats
   {
-    font-family: Arial;
     font-size: 14px;
     color: rgb(97, 97, 97);
-    margin-top: 0;
     margin-bottom: 20px;
   }
 
   .video-author
   {
-    font-family: Arial;
     color: rgb(97, 97, 97);
-    font size: 14px;
-    margin-top: 0;
+    font-size: 14px;
+  }
+
+  .video-description
+  {
+      font-size: 14px;
+      color: rgb(97, 97, 97);
+      width: 280px;
+      line-height: 22px;
+      margin-top: 20px;
+      margin-bottom: 100px;
+      
+  }
+
+  .apple-text
+  {
+    margin-bottom: 50px;
+    font-size: 14px;
+    background-color: rgb(227, 65, 64);
+    color: white;
+    text-align: center;
+    padding-top: 18px;
+    padding-bottom: 18px;
+
+  }
+
+  .shop-link
+  {
+    cursor: pointer;
+  }
+
+  .shop-link:hover
+  {
+    text-decoration: underline;
+
   }
 
 </style>
@@ -41,6 +77,11 @@
   Marques Brownlee &check; 
 </p>
 
-<p>
+<p class="video-description">
   Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!
+</p>
+
+<p class="apple-text">
+  Shop early for the best selection of holiday favourites. 
+  <span class="shop-link"> Shop now &gt; </span>
 </p>
