--- a/text.html
+++ b/text.html
@@ -18,7 +18,7 @@
       Marques Brownlee &check; 
     </p>
     
-    <p>
+    <p class="video-description">
       Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!
     </p>
     
