--- a/position.html
+++ b/position.html
@@ -17,6 +17,7 @@
     left: 0px;
     right: 0px;
     height: 50px;
+    z-index: 1;
     ">header
     </div>
 
@@ -30,7 +31,33 @@
     width: 72px;
     ">
       sidebar
+      <div style="
+      position: absolute;
+      background-color: red;
+      color: white;
+  
+      right: 3px;
+      top: 3px;
+      ">
+        X
+      </div>
+
+      
+
     </div>
+
+    <div style="
+    position: absolute;
+    background-color: red;
+    color: white;
+
+    right: 10px;
+    top: 60px;
+    ">
+      absolute
+    </div>
+
+
     <div style="
     background-color: lightblue;
     height: 200px;
@@ -44,8 +71,20 @@
     background-color: lightpink;
     height: 200px;
     width: 200px;
+    position: relative;
     ">
       div 2
+      <div style="
+      position: absolute;
+      background-color: black;
+      color: white;
+  
+      right: 10px;
+      bottom: 10px;
+      
+      ">
+        5:00
+      </div>
     </div>
   </body>
 </html>
