--- a/youtube.html
+++ b/youtube.html
@@ -39,7 +39,6 @@
           src="youtube-icons/voice-search-icon.svg" alt="">
         </button>
       </div>
-
       <div class="right-section">
         <img 
         class="upload-icon"
@@ -47,10 +46,14 @@
         <img 
         class="youtube-apps-icon"
         src="youtube-icons/youtube-apps.svg">
-        <img 
-        class="notifications-icon"
-        src="youtube-icons/notifications.svg" alt="">
-      
+
+        <div class="notifications-icon-container">
+          <img 
+          class="notifications-icon"
+          src="youtube-icons/notifications.svg">
+          <div class="notifications-count">3</div>
+        </div>
+
         <img 
         class="current-user-picture"
         src="youtube-prof/my-channel.jpeg">
@@ -61,7 +64,6 @@
     
     <div class="sidebar">
       sidebar
-
     </div>
 
 
@@ -71,6 +73,7 @@
         <!virtical>
         <div class="thumbnail-DIV"> <!THUMB>
           <img class= "thumbnail" src="youtube-thumbs/thumbnail-1.webp">
+          <div class="video-time">14:20</div>
         </div>
         <div class="below-thumb-DIVgrid"> <!PROF+INFO>
           <!horizontal>
@@ -100,6 +103,7 @@
         <!virtical>
         <div class="thumbnail-DIV"> <!THUMB>
           <img class= "thumbnail" src="youtube-thumbs/thumbnail-2.webp">
+          <div class="video-time">8:22</div>
         </div>
         <div class="below-thumb-DIVgrid"> <!PROF+INFO>
           <!horizontal>
@@ -130,6 +134,7 @@
         <!virtical>
         <div class="thumbnail-DIV"> <!THUMB>
           <img class= "thumbnail" src="youtube-thumbs/thumbnail-3.webp">
+          <div class="video-time">9:13</div>
         </div>
         <div class="below-thumb-DIVgrid"> <!PROF+INFO>
           <!horizontal>
@@ -160,6 +165,7 @@
         <!virtical>
         <div class="thumbnail-DIV"> <!THUMB>
           <img class= "thumbnail" src="youtube-thumbs/thumbnail-4.webp">
+          <div class="video-time">22:09</div>
         </div>
         <div class="below-thumb-DIVgrid"> <!PROF+INFO>
           <!horizontal>
@@ -190,6 +196,7 @@
         <!virtical>
         <div class="thumbnail-DIV"> <!THUMB>
           <img class= "thumbnail" src="youtube-thumbs/thumbnail-5.webp">
+          <div class="video-time">11:17</div>
         </div>
         <div class="below-thumb-DIVgrid"> <!PROF+INFO>
           <!horizontal>
@@ -220,6 +227,7 @@
         <!virtical>
         <div class="thumbnail-DIV"> <!THUMB>
           <img class= "thumbnail" src="youtube-thumbs/thumbnail-6.webp">
+          <div class="video-time">19:59</div>
         </div>
         <div class="below-thumb-DIVgrid"> <!PROF+INFO>
           <!horizontal>
