Half way through part 16

--- a/youtube.html
+++ b/youtube.html
@@ -31,6 +31,7 @@
           <img 
           class="search-icon"
           src="youtube-icons/search.svg">
+          <div>Search</div>
         </button>
 
         <button class="voice-button">
@@ -63,7 +64,31 @@
     </div>
     
     <div class="sidebar">
-      sidebar
+      <div class="sidebar-link">
+        <img src="youtube-icons/home.svg" alt="">
+        <div>Home</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="youtube-icons/explore.svg" alt="">
+        <div>Explore</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="youtube-icons/subscriptions.svg" alt="">
+        <div>Subscriptions</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="youtube-icons/originals.svg" alt="">
+        <div>Originals</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="youtube-icons/youtube-music.svg" alt="">
+        <div>Youtube Music</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="youtube-icons/library.svg" alt="">
+        <div>Library</div>
+      </div>
+
     </div>
 
 
